@@ -1,3 +1,10 @@
+2005-03-17  John Luke  <john.luke@gmail.com>
+
+	* Dock.cs:
+	* DockItem.cs:
+	* DockItemGrip.cs: clean up SizeRequest and SizeAllocate
+	fixes one of our resizing bugs
+
 2005-03-15  John Luke  <john.luke@gmail.com>
 
 	* DockBar.cs:
